05-Metal&Traefik/002-Merhaba-Dunya/02-Merhaba-service.yml
apiVersion: v1
kind: Service
metadata:
  name: merhaba-servisi
  labels:
    app: merhaba-dunya
spec:
  type: LoadBalancer
  selector:
    app: merhaba-dunya
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
