05-Metal&Traefik/002-Merhaba-Dunya/03-Merhaba-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: merhaba-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`merhaba.lab.io`)
      services:
        - kind: Service
          name: merhaba-servisi
          port: 80
